--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -13,7 +13,7 @@
 
   .navbar-image {
     height: 400px;
-    background: linear-gradient(to right, hsla(268, 37%, 26%, 0.356), hsla(298, 37%, 26%, 0.342)), url(../../assets/mainphoto.jpg);;
+    background: linear-gradient(to right, hsla(268, 37%, 26%, 0.356), hsla(298, 37%, 26%, 0.342)), url(../../assets/banner-revolution.png);;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
