--- a/src/components/ProductsDetail/ProductsDetail.css
+++ b/src/components/ProductsDetail/ProductsDetail.css
@@ -1,6 +1,4 @@
 .product-detail-container {
-    display: flex;
-    flex-direction: column;
     align-items: center;
   }
   
@@ -32,7 +30,8 @@
   }
   
   .product-image {
-    width: 100%;
+    width: 50%;
+    margin-bottom: 3rem;
   }
   
   .product-price-actions {
