fix from client

--- a/src/components/ProductsDetail/ProductsDetail.css
+++ b/src/components/ProductsDetail/ProductsDetail.css
@@ -1,5 +1,8 @@
 .product-detail-container {
+    display: flex;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
   
   .product-header {
